# mo810

./: .gitignore  README.md  pyproject.toml
data/: AdCats.csv  AllAds.csv  AllUsers.csv  AllUsers_Ads_Ratings_df.csv  AllUsers_And_Ads.csv  X_test.csv  X_train.csv  X_valid.csv  final_features_df.csv  tags.csv  unfaves.txt  y_test.csv  y_train.csv  y_valid.csv
lib/: readdatautils.py
lib/.ipynb_checkpoints/: fetch-data-checkpoint.py
notebooks/t2-tratamento-de-dados/: exploration.ipynb  privacy-analysis.ipynb
notebooks/t3-modelagem/: bayes-risk.ipynb  detection-theory.ipynb  models.ipynb
notebooks/t3-tratamento-de-dados/: data-aggregations.ipynb  models.ipynb
notebooks/t4-imparcialidade/: correlacao-espuria.ipynb  in-processing.ipynb  post-processing.ipynb  pre-processing.ipynb
notebooks/t5-interpretabilidade/: counterfactual.ipynb  dt-visual-explain.ipynb  global-and-local-approximations.ipynb
