[tool.poetry]
name = "mo810"
version = "0.1.0"
description = ""
authors = ["delucca <gpg@delucca.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
jupyterlab = "^3.4.8"
tqdm = "^4.64.1"
opendatasets = "^0.1.22"
pandas = "^1.5.0"
matplotlib = "^3.6.1"
pathlib = "^1.0.1"
anonypy = "^0.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
